# cli-file-explorer

./: .gitignore  HotKeys.txt  README.md  app.py  fileexp  fuzzy_search.py  image_previewer.py  pyproject.toml  requirements.txt  screens.py  themes.py  utils.py  widgets.py
tools/: audio_player.py  fuzzy_search.py  image_previewer.py  pdf_previewer.py  svg_previewer.py  utils.py  video_thumbnail.py
